@@ -1,6 +1,7 @@
 since 1.4.0
 ===========
 - Fix potential crash when rendering obscured cells (#108659)
+- Don't automatically make cells left aligned when increasing indent.
 
 since 1.4-beta1
 ===============
